<resources>
    <string name="app_name">NavigationTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">نام کاربر</string>
    <string name="text_profile">پروفایل</string>
    <string name="text_about_us">درباره ما</string>
    <string name="text_contact_us">تماس با ما</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_category">متن نمایش داده شد</string>
    <string name="text_login">ورود</string>
    <string name="editText_user">نام کاربری</string>
    <string name="editText_pass">رمز</string>
    <string name="create_user">کاربر جدید</string>
    <string name="edit_text_name">نام</string>
    <string name="edit_text_family">نام خانوادگی</string>
    <string name="edit_text_imail">ایمیل</string>
    <string name="button_vorod">ورود</string>
    <string name="button_cancle">انصراف</string>
    <string name="text_myemail">Hyousefi412@gmail.com</string>
    <string name="link_github">https://github.com/HUsefi</string>
    <string name="text_about_me">Hello Dear ...Here is about me</string>
    <string name="text_view_retrofit">رتروفیت</string>
    <string name="text_retrofit">رتروفیت</string>
</resources>
